# sketchup-mcp-server

./: .editorconfig  .gitignore  .gitmodules  .rubocop.yml  .solargraph.yml  AGENTS.md  CHANGELOG.md  Gemfile  LICENSE  README.md  Rakefile  pyproject.toml  releaserc.toml  sonar-project.properties
.github/workflows/: ci.yml  release.yml
config/: runtime_package_manifest.json
contracts/bridge/: bridge_contract.json
docs/: mcp-tool-reference.md
python/tests/: test_app.py  test_bridge.py  test_config.py  test_support.py  test_tools.py  test_version.py
rakelib/: package.rake  python.rake  release_support.rb  ruby.rake  version.rake
rakelib/release_support/: runtime_package_manifest.rb  runtime_package_stage_builder.rb  runtime_package_vendor_stager.rb  runtime_package_verifier.rb
specifications/: domain-analysis.md  ruby-platform-coding-guidelines.md  sketchup-extension-development-guidance.md
specifications/adrs/: 2026-04-16-ruby-native-mcp-target-runtime.md
specifications/guidelines/: mcp-tool-authoring-sketchup.md  ruby-platform-coding-guidelines.md  (+2 more)
src/: su_mcp.rb
test/: .rubocop.yml  editing_commands_test.rb  find_entities_scene_query_commands_test.rb  joinery_commands_test.rb  mcp_runtime_config_test.rb  mcp_runtime_facade_test.rb  mcp_runtime_http_backend_test.rb  mcp_runtime_loader_test.rb  mcp_runtime_main_integration_test.rb  mcp_runtime_native_contract_test.rb  mcp_runtime_promotion_test.rb  mcp_runtime_server_test.rb  mcp_spike_config_test.rb  mcp_spike_facade_test.rb  mcp_spike_http_backend_test.rb  mcp_spike_main_integration_test.rb  mcp_spike_runtime_loader_test.rb  mcp_spike_server_test.rb  model_adapter_test.rb  modeling_support_test.rb  pad_builder_test.rb  path_builder_test.rb  planting_mass_builder_test.rb  request_handler_test.rb  request_processor_test.rb  response_helpers_test.rb  retaining_edge_builder_test.rb  runtime_logger_test.rb  runtime_package_manifest_loader_test.rb  runtime_package_manifest_test.rb  runtime_package_stage_builder_test.rb  runtime_package_tasks_test.rb  runtime_package_vendor_stager_test.rb  runtime_package_verifier_test.rb  sample_surface_support_test.rb  sample_surface_z_scene_query_commands_test.rb  scene_query_commands_adapter_test.rb  scene_query_commands_test.rb  semantic_builder_registry_test.rb  semantic_commands_test.rb  (+15 more)
(+908 files in other folders)
