[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sketchup-mcp-server"
version = "0.11.0"
description = "FastMCP server for the SketchUp MCP extension."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=3.2.3,<4"
]

[project.scripts]
sketchup-mcp-server = "sketchup_mcp_server.__main__:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.5",
  "python-semantic-release>=10.5.0",
]

[tool.setuptools.package-dir]
"" = "python/src"

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["python/src", "python/tests"]

[tool.semantic_release]
allow_zero_version = true
assets = [
  "VERSION",
  "uv.lock",
]
build_command = "bundle exec rake release:prepare"
commit_message = "chore(release): {version} [skip ci]"
commit_parser = "conventional"
tag_format = "v{version}"
version_toml = [
  "pyproject.toml:project.version",
]
version_variables = [
  "src/su_mcp/version.rb:VERSION",
  "src/su_mcp/extension.json:version",
  "python/src/sketchup_mcp_server/version.py:__version__",
]

[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*.rbz"]
upload_to_vcs_release = true
